# proto_universe

./: .gitignore  .gitmodules  ARCHITECTURE_CODE_REVIEW.md  ARCHITECTURE_V2_AUDIT_REPORT.md  CONTRIBUTING.md  DEEP_AUDIT_REPORT.md  EVAL_READY.md  EXPERIMENTS_FINAL.md  EXPERIMENTS_GUIDE.md  EXPERIMENTS_README.md  FL_IMPLEMENTATION_SUMMARY.md  MULTI_ARCHITECTURE_RESULTS.md  MULTI_ARCHITECTURE_SUPPORT.md  PAPER_REVISION_SUMMARY.md  PROTOCOLYPE_RESEARCH_ROADMAP.md  QUICKSTART.md  QUICKSTART_SEQUENTIAL_FOLDING.md  README.md  RESEARCH_EVALUATION_METHODOLOGY.md  SEQUENTIAL_FOLDING_INTEGRATION_COMPLETE.md  SEQUENTIAL_FOLDING_TEST_REPORT.md  TBD  ZKP_FIX_SUMMARY.md  ZKP_NORM_BOUNDS_ENHANCEMENT.md  architecture.md  config.yaml  eval_tbd.md  lib.rs  main.bib  paper.tex  protogalaxy_architecture(2).md  protogalaxy_architecture.md  protogalaxy_mvp_jira_tasks.md  reccomend.txt  report.md  requirements-dev.txt  requirements.txt  run_pipeline.py  setup.py  verify_pipeline.py
benchmarks/: bench_attack_robustness.py  bench_overhead.py  bench_scalability.py  bench_zkp_value.py  run_all.sh
examples/: demo_bounded_zkp.py  pipeline_usage.py
md_files/: ARCHITECTURE_VERIFICATION_REPORT.md  COLAB_SETUP_AND_RUN.md  COMPLEXITY_ANALYSIS.md  FL_PIPELINE_COMPLETE.md  FL_PIPELINE_QUICKSTART.md  SETUP_AND_RUN_COMMANDS.md  TOP_TIER_ESSENTIAL_TEST_PLAN.md  ZKP_IMPLEMENTATION_GAP_REPORT.md  audit_report.md  protogalaxy_file_structure.md  reproduce_coordinator.py  runs.md
old/: byzantine_test_results.txt
scripts/: analyze_results.py  bench_scalability.py  compile_paper_results.py  evaluate_attack_rejection.py  evaluate_zkp_performance.py  plot_mnist_comparison.py  run_ablation_after_attacks.sh  run_ablation_study.py  run_eval_adaptive.py  (+14 more)
sonobe-py-bindings/: Cargo.toml  README.md  pyproject.toml
sonobe-py-bindings/src/: lib.rs  limitation.txt
sonobe-py-bindings/tests/: test_proof_folding.py  test_variable_k.py
(+139 files in other folders)
