[package]
name = "sonobe-py-bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "sonobe_protogalaxy"
crate-type = ["cdylib"]

[patch.crates-io]
# Match sonobe workspace patches for arkworks dependencies
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "b3b4a15" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
ark-relations = { git = "https://github.com/arkworks-rs/snark" }
ark-snark = { git = "https://github.com/arkworks-rs/snark" }
ark-crypto-primitives = { git = "https://github.com/flyingnobita/crypto-primitives", rev = "f559264" }
ark-r1cs-std = { git = "https://github.com/flyingnobita/r1cs-std_yelhousni", rev = "b4bab0c" }
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra" }
ark-grumpkin = { git = "https://github.com/arkworks-rs/algebra" }

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
folding-schemes = { path = "../sonobe/folding-schemes" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
